--- a/src/translations/pt_BR.json
+++ b/src/translations/pt_BR.json
@@ -925,7 +925,7 @@
     "defaultMessage": "Vídeos mais recentes"
   },
   "vP4dFa": {
-    "defaultMessage": "Visite o site {link} para adquirir produtos da zap.stream!"
+    "defaultMessage": "Visite {link} para obter um impulso de stream Z pago em Bitcoin!"
   },
   "vrTOHJ": {
     "defaultMessage": "{amount} sats"
