--- a/src/translations/zh_TW.json
+++ b/src/translations/zh_TW.json
@@ -925,7 +925,7 @@
     "defaultMessage": "最新视频"
   },
   "vP4dFa": {
-    "defaultMessage": "Visit {link} to get some sweet zap.stream merch!"
+    "defaultMessage": "Visit {link} to get a Z stream boost paid in Bitcoin! "
   },
   "vrTOHJ": {
     "defaultMessage": "{amount} 聰"
