--- a/src/translations/bn_BD.json
+++ b/src/translations/bn_BD.json
@@ -925,7 +925,7 @@
     "defaultMessage": "Latest Videos"
   },
   "vP4dFa": {
-    "defaultMessage": "Visit {link} to get some sweet zap.stream merch!"
+    "defaultMessage": "Visit {link} to get a Z stream boost paid in Bitcoin!"
   },
   "vrTOHJ": {
     "defaultMessage": "{amount} পরিমাণ স্যাট"
