--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -129,9 +129,9 @@
   "KtrGU6": "If you already have an account, you can use a nostr extension to log in. If you already use a nostr extension, you will be automatically logged in. If you don't have a nostr extension set up, you can use nos2x or Alby.",
   "KxfKnW": "Withdraw funds",
   "LEmxc8": "Zap Goals",
-  "LUvSJB": "zap.stream is free up to 2 hours of hosting at high quality and up to 8 hours of “source” quality. After that you have an option to stream for 5 sats per minute or 10 sats per minute depending on your chosen quality. If you do not use zap.stream to host, pricing will depend on your chosen streaming provider.",
+  "LUvSJB": "Z is free up to 2 hours of hosting at high quality and up to 8 hours of “source” quality. After that you have an option to stream for 5 sats per minute or 10 sats per minute depending on your chosen quality. If you do not use zap.stream to host, pricing will depend on your chosen streaming provider.",
   "Le+99Z": "Streamers pay a small fee to cover our running costs. We give new streamers a credit of {amount} sats (about {time_estimate} of streaming) to get started!",
-  "Lg2ye2": "ZapStream is a new kind of streaming platform that allows you to earn bitcoin (sats) the moment you start streaming! Viewers can tip streamers any amount they choose. The tips are instantly deposited to your bitcoin (lightning) wallet. zap.stream never touches your earnings!",
+  "Lg2ye2": "Z is a new kind of streaming platform that allows you to earn bitcoin (sats) the moment you start streaming! Viewers can tip streamers any amount they choose. The tips are instantly deposited to your bitcoin (lightning) wallet. zap.stream never touches your earnings!",
   "LknBsU": "Stream Key",
   "LxSJOb": "Go to Dashboard",
   "MTHO1W": "Start Raid",
@@ -304,7 +304,7 @@
   "uYw2LD": "Stream",
   "ug01Mk": "Time",
   "uksRSi": "Latest Videos",
-  "vP4dFa": "Visit {link} to get some sweet zap.stream merch!",
+  "vP4dFa": "Visit {link} to get a Z stream boost paid in Bitcoin!",
   "vrTOHJ": "{amount} sats",
   "w+2Vw7": "Shorts",
   "w0Xm2F": "Start typing",
