--- a/src/translations/it_IT.json
+++ b/src/translations/it_IT.json
@@ -925,7 +925,7 @@
     "defaultMessage": "Ultimi video"
   },
   "vP4dFa": {
-    "defaultMessage": "Visitate il sito {link} per acquistare il merch di zap.stream!"
+    "defaultMessage": "Visitate il sito {link} per ottenere un boost Z stream pagato in Bitcoin!"
   },
   "vrTOHJ": {
     "defaultMessage": "{amount} saturazione"
